--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -34,3 +34,6 @@
 
 /** Careers Page Styling **/
 @import 'template-parts/pages/careers';
+
+/** Mobile Menu Styling **/
+@import 'template-parts/layout/mobile-nav-menu';
