--- a/sass/theme/template-parts/pages/news-events.scss
+++ b/sass/theme/template-parts/pages/news-events.scss
@@ -37,6 +37,7 @@
             font-size: 14px;
             font-weight: 500;
             color: #666666;
+            letter-spacing: $va-120;
         }
     }
 
