--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -44,6 +44,8 @@ $btn-font-size: 14px;
 
 $quick-hit-headline-size: 24px;
 
+$va-120: 0.12em;
+
 @mixin phone {
     @media(max-width:768px) {
         @content;
