--- a/sass/theme/template-parts/home/pathways_section.scss
+++ b/sass/theme/template-parts/home/pathways_section.scss
@@ -21,6 +21,7 @@ body.home:not(.logged-in) {
 }
 
 section#pathways {
+    
     @media(max-height: 870px) {
         padding-top: 70px;
     }
@@ -28,13 +29,16 @@ section#pathways {
         padding-top: 125px;
     }
     @include phone {
-        padding-top: 30px;
+        padding-top: 0px;
+        background-repeat:no-repeat !important;
     }
     padding-bottom: 100px;
-    background-size:contain;
-    background-position: top left;
-    background-repeat: no-repeat;
-    background-color: #000;
+    @include desktop {
+        background-size:contain !important;
+        background-position: top left !important;
+        background-repeat: no-repeat !important;
+        background-color: #000 !important;
+    }
     overflow:hidden;
 
 
