--- a/sass/theme/template-parts/pages/our-team.scss
+++ b/sass/theme/template-parts/pages/our-team.scss
@@ -10,13 +10,23 @@
         .image-section {
             padding-right: 0;
             .bio-image {
-                width: 100%;
+                @include desktop {
+                    width: 100%;
+                }
                 height: auto;
+                clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 90%, 0% 25%);
+                @include phone {
+                    margin-bottom: 25px;
+                    width: 60%;
+                }
             }
         }
         
 
         .text-section {
+            @include desktop {
+                padding-left:40px;
+            }
             .h1-title {
                 color: black;
                 margin-bottom: 0;
