--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -11974,6 +11974,11 @@ body #primary-nav.hasBackground {
     .sidebar-section .extra-sidebar-content p, .sidebar-section .extra-sidebar-content strong, .sidebar-section .extra-sidebar-content body:not(.home) .main-content, body:not(.home) .sidebar-section .extra-sidebar-content .main-content {
       color: white; }
 
+footer a {
+  color: #818181; }
+  footer a:hover {
+    text-decoration: none; }
+
 /** Homepage Styling **/
 body.home {
   background-color: black; }
@@ -12532,6 +12537,55 @@ body:not(.home) {
     margin-bottom: 10px;
     margin-top: 10px; }
 
+.blue-overlay, .services-overlay {
+  background-color: #144D86;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 85%, 0% 25%);
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 85%, 0% 25%);
+  padding: 0 20px;
+  height: 161px !important;
+  width: 45%;
+  display: inline-block;
+  margin-bottom: 30px;
+  margin-top: 10px;
+  position: relative; }
+  .blue-overlay:nth-of-type(odd), .services-overlay:nth-of-type(odd) {
+    margin-right: 25px; }
+  .blue-overlay::after, .services-overlay::after {
+    content: url(/wp-content/uploads/2020/02/whitestar.png);
+    position: absolute;
+    top: 5px;
+    right: 10px; }
+  .blue-overlay img, .services-overlay img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain !important;
+       object-fit: contain !important;
+    -o-object-position: center;
+       object-position: center; }
+
+.services-overlay {
+  background-image: url(/wp-content/uploads/2020/01/slider-image-two.png);
+  background-size: cover;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 15px; }
+  .services-overlay a {
+    position: absolute;
+    width: 70%;
+    font-weight: 400 !important;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    font-family: Montserrat,sans-serif !important;
+    font-size: 18px;
+    color: white !important; }
+
 /** Team Page Styling **/
 .team-members:not(.single-team) {
   margin-top: 40px; }
@@ -12683,8 +12737,13 @@ body:not(.home) {
   .single-leadership .col-md-4.sidebar-section {
     display: none; } }
 
-.search .col-md-4.sidebar-section {
-  display: none; }
+@media (max-width: 768px) {
+  .search .col-md-4.sidebar-section {
+    display: none; } }
+
+@media (min-width: 768px) {
+  .search #sidebar {
+    display: none; } }
 
 /** Insights Page Styling **/
 .insights .featured-offer {
