--- a/sass/theme/template-parts/pages/default-page-styling.scss
+++ b/sass/theme/template-parts/pages/default-page-styling.scss
@@ -31,3 +31,50 @@ body:not(.home) {
     }
 
 }
+
+.blue-overlay {
+    background-color: #144D86;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%, 0 85%, 0% 25%);
+    padding: 0 20px;
+    height: 161px !important;
+    width: 45%;
+    display: inline-block;
+    margin-bottom: 30px;
+    margin-top: 10px;
+    position: relative;
+    &:nth-of-type(odd) {
+        margin-right: 25px;
+    }
+    &::after {
+        content: url(/wp-content/uploads/2020/02/whitestar.png);
+        position: absolute;
+        top: 5px;
+        right: 10px;
+    }
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain !important;
+        object-position: center;
+    }
+}
+
+.services-overlay {
+    @extend .blue-overlay;
+    background-image:url(/wp-content/uploads/2020/01/slider-image-two.png);
+    background-size:cover;
+    display:inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15px;
+    a {
+        position: absolute;
+        width: 70%;
+        font-weight: 400 !important;
+        text-transform: uppercase;
+        letter-spacing: 1.2px;
+        font-family: Montserrat,sans-serif !important;
+        font-size: 18px;
+        color: white !important;
+    }
+}
