--- a/sass/theme/template-parts/home/seo-section.scss
+++ b/sass/theme/template-parts/home/seo-section.scss
@@ -79,3 +79,12 @@ section#seo-section {
     }
 
 }
+
+.col-md-6.credentials {
+    position: relative;
+    top: -86px;
+}
+
+section#seo-section .credentials hr {
+    margin-bottom: 86px;
+}
